<resources>
    <string name="app_name">Bryan Leung</string>
    <string name="firstLine">This is an app made by this beautiful specimen</string>
    <string name="aboutBryan">About</string>
    <string name="contactSocial">Social Media</string>
    <string name="contactSocialSpinner">Select My Social Media</string>
    <string name="placesVisited">Phone Intents</string>
    <string name="gamesPlayed">Games I play</string>
    <string name="playSnake">Play Snake</string>
    <string name="openingLineHome">This app was made to exercise my self-taught skills, practice clean code, and design patterns.
    It is targeted for use on portrait mode smart phones.
    </string>
    <string name="closingLineHome">
        If this app was downloaded from the Google Play Store, then I have finished my first project. At this moment I am continuing my studies and focusing on DS and Algos.
        I will also look into making some REST and CRUD apps to dig into more advanced topics like APIs, networking, and background services.
    </string>
    <string name="aboutBryanBodyText1">
        \t\tThe bottom of each section will describe major parts and concepts of Android that I have implemented into the current screen.
        If the image is of a computer there is an error. If it is an airplane or empty then it is loading. \n\n
    </string>
    <string name="aboutBryanBodyText2">
     \n\n\t\tMy name is Bryan Leung.
        I am self taught and using Android Studio to learn about programming and Java.
        I am a University of California, Santa Cruz graduate.\n\n
    </string>
    <string name="aboutBryanBodyText3">
        \n\n\t\tHow do I learn and what resources do I use?\n\n
        I use free online resources to learn a bit everyday:
        Udacity, Udemy, Codecademy, Youtube, Blogs, Google/Android developer site, Reddit, Stack Overflow, etc.\n\n
    </string>
    <string name="aboutBryanBodyText4">
      \n\n\t\tWhat do I do in my free time and when I am not studying?\n\n
        My hobbies are diverse. I hike long distances for scenic views or for Pokemon Go.
        I snowboard in the winter, avoiding the black diamonds because of fear.
        I slow cook BBQ ribs over many hours and have the meat fall off the bone.
        I enjoy meal prepping for my girlfriend and myself.
        I am a heavy gamer, both literally and symbolically.
        Also, I am trying to lose some weight. \n\n
    </string>
    <string name="aboutBryanBodyText5">
      \n\n\t\tWhat is my personality like?\n\n
        My personality is not static, but rather dynamic and versatile.
        I can be an introvert support player in the back or the extrovert star at head of the team.
        I am a great vacation planner as well as an open-minded and spontaneous person.
        I prefer clean and tidy but will get my hands dirty to do some manual labor if need be.
        I enjoy learning about mostly everything: politics, tech, science, the economy, current events, and local issues.
        For example, my Youtube \"watch it again\" section shows cat videos, anime clips, Primitive Technology\'s videos, Gordon Ramsay cooking,
        fishing videos, physics phenomena, Insider, AGT, How It\'s Made, and movie trailers. I can watch almost everything that sparks a bit of curiosity. \n\n
    </string>
    <string name="aboutBryanBodyText6">
      \n\n\t\tSo what are you doing now?\n\n
        I paid off my student loans, have no debt, and saved up a lot of money from when I was working.
        My financial situation is not a concern since I have a very rare spending history.
        Because of this lack of urgency, I decided to self teach myself programming.
        I am learning CS every day. I am reading CTCI and learning about design.
        I also traveled, attended weddings, and spent a few months with my ailing grandpa in China.\n\n
    </string>
    <string name="aboutBryanBodyText7">
      \n\n\t\tThis page covers scroll view and nice string aesthetics.
        And because the home activity did not have this bottom description, due to design reasons, I will list it here.
        The home page covers Linear and Relative Layouts as well as onClick() buttons.
        I also show my use of clean code and practiced it in the XML values folder: colors, styles, strings.
        I kept hardcoding to a minimum and I have registered an id for all the views so that methods can act or call them.
        There is also a little welcome toast message that pops up when the app boots up. If you found this app through the Google play store,
        then that means I have learned how to follow the guidelines and publish an app.  As a reminder, this is one of my first personal apps and I am constantly learning.
        Thank you. \n
        Update: I have made design changes to this page with images and practiced using the Picasso library. \n\n
    </string>
    <string name="hiddenAboutBryanBodyTextPartDos">

        This is all stuff I cut from my original body paragraph but wanted to include it since it still provides more insight.
        I have a B.S. in Human Biology.
        After numerous years of science classes, hospital shadowing, internships, and medical work experience, I am making a career change out of science and health care.
        Now I am focusing on my quarter life crisis, which is a career change into the tech field.

        \t\tWhat am I doing while self teaching?\n\n
        I have filled the role of a stay at home mom but without the kid or the ring or the female role.
        Yes, that was supposed to be a joke.
        I meal prep for two, act as a six-star personal driver, and take care of highly dependent woman, who is getting her doctorate degree.
        I worked since high school and still have the student work permit to prove my early work ethic.
        Since 16, I have been on a payroll and only recently I have been living as a bum.
        I have had numerous other jobs, mostly in food or customer service to help pay for college and life.\n\n

        After peaking at 230 pounds, I started exercising more and my goal is to stay sub 200s and healthy.
        I am fluctuating right now at the 210s which doesn\'t seem too bad for a 6 feet guy but I\'d like to look better.
        I am tough on the outside as well as the inside. Growing up, I was used to being bullied, \"walking it off,\"
        and dealing with life. I have my confidence and past to push me through new content ahead of me.

         \t\tDuring college I had many internships in the fields of construction, public health, medicine, and education.
        After college I had a job at IHSS, now knows as Homebridge, working as a caregiver.
        I looked after many clients with many different ailments- physical and mental.
        While working, I volunteered, shadowed a orthopedic surgeon, and studied for the MCAT.
        I applied to medical school but am not pursuing that path anymore.
        Looking back, I know that I went in for the wrong reasons and I believe others are better suited.
        I am grateful for the many dozens of people who have helped me.
        My volunteer experiences vary from animal shelters, tutoring, and wildlife restoration.
    </string>
    <string name="entertainingStory">
         \t\t I will now entertain you with a story and how I imagine my life plan:
        While learning Java and Android, I create this decent app that acts like an extremely personal profile page.
        This is my first personal project and programming baby.
        You somehow stumble on this. You are reading this, it impresses you, you like me, and you find me ambitious and driven.
        You also read all my other hidden strings in this file and get to know me even more.
        You want to give me a chance.
        You get me started off with an internship or temporary job at your company.
        Months go by and no one has a problem with me.
        My performance is satisfactory and I am reliable.
        I am responsible, mature, and meet deadlines.
        You agree that my personality is a perfect fit for the company culture.
        Now it is the nearing the end of my trial, I receive an offer.
        I start off as a junior developer and after a few years and an open position, a senior.
        More positions open up that I am interested in.
        I get promoted to team manager or an administration position.
        You have noticed my leadership skills and important inputs after several more years.
        Eventually I am on the board of the company.
        The project that I started on has grown exponentially.
        You retire and at that going away party, you find that I have bought you life time tickets to that thing you love.
        I now reveal to everyone at that party that I will be taking over as Chief Executive (insert alphabet letter).
        Everyone is happy and the company is a success all thanks to you and me.
        Wow that was a great and entertaining story huh?
        A bit dramatized but that makes it more fun which engages you.
        Do you know how hard it is these days to keep people reading?
        Lots of short attention spans, instant gratification behaviors, and lack of intractability in this text string,
        And I still have you hooked and reading =).
        The moral to this story is that I am a decent person and you are interested in me because no one reads this far down
        and is not intrigued.\n
    </string>
    <string name="intentButton1">Use Phone Camera</string>
    <string name="intentButton2">Send Email to Me</string>
    <string name="intentButton3">See What I Live Next To</string>
    <string name="intentButton4">Send an Instant Text</string>
    <string name="intentButton5">Call Me And Leave a Voicemail</string>
    <string name="intentButton6">Use Internet to Open an Imgur Album</string>
    <string name="phoneIntentEnding">
        \t\tI learned how to start activities in other apps such as the camera or messaging via implicit intents.
        The Bryan app will crash if there are no apps that can receive the intent.
        If you click the last button, you will open an Imgur album of me. I like to make ugly faces and take hideous selfies.
        I also learned about permissions on Android and how API 23+ needs to request on runtime.
        I played around with requesting, handling, and checking permissions code from the Android developer site.
        There were many intermediate concepts and code that I practiced with online but I did not implement those lines of code in this app.
        I kept this app real basic and minimal so I could focus more on studying DS and Algorithms.
        With the camera, I learned about making new files to store the images, accessing with a bitmap, and setting them into an image view.
        The email used is extremely basic and I did not go further into that.
        The maps taught me about uri and the option of using map URLs versus a Google Maps intent for my intended purpose.
        The SMS part gave me issues and problems with permissions and API levels.
        This is where I learned the most and changed my button to instantly send a pre-written string without opening the messaging App.
        The call button just dials my number and the user has to hit dial.
        The internet intent opens a page with a few humorous photos of me and their witty description.\n\n

    </string>
</resources>