<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffc8c8"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="com.bryanleung.AboutMe">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:id="@+id/aboutMeBodyText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutBryanBodyText1"
            android:textColor="#000000"
            android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText2"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText3"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText4"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText5"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText6"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/bynURL6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/aboutMeBodyText7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aboutBryanBodyText7"
                android:textColor="#000000"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
